# trash

./: .gitignore  haskell.md  readme.md
asm/: ccode.c  hello  hey.asm  max  max.asm  newref.asm  smp  smp.asm  what  what.asm
hs/: lazy.hs  strict1.hs  strict2.hs
hs/book/: Makefile  haskell-convert.sh  haskell.md  (+4 more)
os/: boot.asm  div.asm  ex1.asm  hello.asm  jump.asm  lib.asm  loop.asm  paddr.asm  print.asm  x.asm
sdl/: Makefile  media.c  media.h  p1  p1.c  p2  p2.c  p3  p3.c  p4  p4.c  p5.c  p6  p6.c  p7.c  rect.txt  ui.c  ui.h  util.c  util.h  valgrind.suppressions
sdl/cpp/src/: .gitignore  CMakeLists.txt  CMakeLists_.txt  Makefile  config.h  config.h.in  main.cpp  media.cpp  media.hpp  project.ctags  scene.hpp  ui.cpp  ui.hpp  util.cpp
sdl/cpp/src/assets/: .gitignore
sdl/cpp/src/media/: audio.cpp  audio.hpp  common.hpp  graphics.cpp  graphics.hpp  log.hpp  media.cpp  media.hpp  object.cpp  object.hpp  state.hpp  text.cpp  text.hpp  timer.hpp  util.hpp
sdl/cpp/src/media/ui/: common.hpp  ui.hpp
sdl/cpp/src/media/ui/geometry/: geometry.hpp
sdl/cpp/src/media/ui/widget/: widget.hpp
sdl/cpp/src/scenes/: game_scene.hpp  quit_scene.hpp  title_scene.hpp
sdl/cpp/src/ui/: common.hpp  primitives.hpp  ui.hpp
sdl/cpp/src/ui/geometry/: common.hpp  geometry.cpp  geometry.hpp  grid.hpp  relative.hpp
sdl/cpp/src/ui/widget/: .common.hpp.swp  button.cpp  button.hpp  common.hpp  container.cpp  container.hpp  label.cpp  label.hpp  widget.hpp
textfingerprinter/: a.py  data.csv  data.json  data.ods  gen.py
util/: util.c  util.h  vector.c
zig/: ref.zig
(+9 files in other folders)
